--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Psychonline</title>
-	<link rel="stylesheet" href="/src/style.css">
+	<link rel="stylesheet" href="https://github.com/jackdelaguilavilla03/psychonline-network.github.io/blob/main/src/style.css">
 </head>
 
 <body>
@@ -54,7 +54,7 @@
 
 
 	<!-- Script -->
-	<script src="/src/index.js"></script>
+	<script src="https://github.com/jackdelaguilavilla03/psychonline-network.github.io/blob/main/src/index.js"></script>
 </body>
 
 </html>
