--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<img id="banner-img" src=""
 				alt="banner">
 			<div class="target">
-				<h1 id="text-banner">El primer paso para comenzar a mejorar</h1>
+				<h1 id="text-banner">El primer paso para empezar a mejorar</h1>
 				<form action="" id="form">
 					<input type="email" id="email" name="email" placeholder="Ingresa tu correo" required />
 					<input type="submit" id="submit" value="comenzar" class="btn" />
