--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Psychonline</title>
-	<link rel="stylesheet" href="https://jackdelaguilavilla03.github.io/psychonline-network.github.io/src/style.css">
+	<link rel="stylesheet" href="/src/style.css">
 </head>
 
 <body>
